components/layout/stylesheets/iphone.styl
@import '../../stylus_lib'

#iphone
  position: fixed
  width: 100%
  overflow: hidden
  text-align: center
  z-index: 11
  max-height: 807px
  height: 84%
  transition: opacity 0.8s
  opacity(0)
  &.visible
    opacity(1)
  .phone
    width: 100%
    height: 100%
    position: absolute
    top: 0px
    left: 0px
    z-index: 100

  .iphone-content
    top: 0px
    left: 0px
    width: 100%
    height: 100%
    position: absolute
    margin-left: 1px

  .phone-content-area
    top: 0px
    left: 0px
    width: 100%
    height: 100%
    overflow: hidden

  .splash-image
    width: auto
    height: 100%
    opacity(0)
    position: absolute
    top: 0px
    left: 0px
    z-index: 5
    margin: 0px auto
    background: black
    &.active
      opacity(1)

  .splash-images.phone-content-area
    text-align: center
    .splash-image
      transition: opacity 0.4s

  .browse-content-area,.explore-content-area, .collect-content-area
    &.active
      .splash-image
        opacity(1)

  .content-padder
    position: absolute
    height: 100%
    width: 100%

  .browse-placeholder
    z-index: 6
  .explore-placeholder
    z-index: 7
  .collect-placeholder
    z-index: 8

